pruebas de ejecucion

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -33,4 +33,5 @@
     </div> 
 </body>
 </html>
-
+ -->
+<h1>Hola HTML</h1>
