--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -28,7 +28,7 @@
             <p>¡Hola {{username}}!, ingresa tu contraseña</p>
             <div><i class="fas fa-user-tie"></i><p>{{user}}</p><a href="/" class="userlink">X</a></div>
             <label for="user"> Ingresa tu Contraseña <i class="fas fa-unlock-alt"></i> </label>
-            <input autofocus type="password" name="clave" id="clave" class="user_inicio" required>
+            <input autofocus autocomplete="off" type="password" name="clave" id="clave" class="user_inicio" required>
             <input type="submit"  class="btn" value="Continuar">
         </form>
     </div>
