--- a/templates/index.html
+++ b/templates/index.html
@@ -24,13 +24,15 @@
     {%endwith%}
     <section class="titulo"><img src="/static/img/Muni.png"  alt="Logo"><h1>P&P System</h1></section>
     <div class="container"> 
-        <form action="/inicio" method="POST">
+        <form action="/validar" method="POST">
             <p>¡Hola! Para seguir, ingresa tu  usuario</p>
             <label for="user"> Ingresa tu Usuario <i class="fas fa-user-tie"></i> </label>
+            <label for="user"> Ingresa tu Contraseña <i class="fas fa-unlock-alt"></i> </label>
             <input autofocus type="text" name="user" id="user"  class="user_inicio" required>
             <input type="submit"  class="btn" value="Continuar">
         </form>
     </div> 
 </body>
+<script></script>
 </html>
 
