--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,9 @@
         <form action="/validar" method="POST">
             <p>¡Hola! Para seguir, ingresa tu  usuario</p>
             <label for="user"> Ingresa tu Usuario <i class="fas fa-user-tie"></i> </label>
-            <label for="user"> Ingresa tu Contraseña <i class="fas fa-unlock-alt"></i> </label>
             <input autofocus type="text" name="user" id="user"  class="user_inicio" required>
+            <label for="user"> Ingresa tu Contraseña <i class="fas fa-unlock-alt"></i> </label>
+            <input autofocus autocomplete="off" type="password" name="clave" id="clave" class="user_inicio" required>
             <input type="submit"  class="btn" value="Continuar">
         </form>
     </div> 
