--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@ section h1{
     margin-top: -80px;
     background: #fff;
     width: 350px;
-    height: 250px;
+    height: calc(100%+20px);
     display:flexbox;
     box-shadow: 0 0 10px  #888;
     border-top-right-radius: 5px;
