--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     {%endwith%}
     <section class="titulo"><img src="/static/img/Muni.png"  alt="Logo"><h1>P&P System</h1></section>
     <div class="container"> 
-        <form action="/validar" method="POST">
+        <form action="/inicio" method="POST">
             <p>¡Hola! Para seguir, ingresa tu  usuario</p>
             <label for="user"> Ingresa tu Usuario <i class="fas fa-user-tie"></i> </label>
             <input autofocus type="text" name="user" id="user"  class="user_inicio" required>
