cambio de ingles a Español

--- a/static/css/formsprodct.css
+++ b/static/css/formsprodct.css
@@ -22,7 +22,7 @@ body::-webkit-scrollbar {
 }
 .container-formscan .form-register form{
     width: 80%;
-    height: 340px;
+    height: calc(100%+20px);
     margin: 60px auto auto auto ;
     background: #fff;
     box-shadow: 0 0 10px #aaa;
