--- a/templates/actualizacion/Searchproduct.html
+++ b/templates/actualizacion/Searchproduct.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/206b5ce088.js" crossorigin="anonymous"></script>
-    <title>Search Product</title>
+    <title>Buscar Producto</title>
 </head>
 <body>
     {% with messages = get_flashed_messages() %}
