--- a/templates/actualizacion/product.html
+++ b/templates/actualizacion/product.html
@@ -63,7 +63,7 @@
                         <td>CB Captura</td>
                         <td>EAN MUNI</td>
                         <td>Producto</td>
-                        <td>Factor de Conversión</td>
+                        <td>Factor de Conversion</td>
                     </tr>
                 </thead>
                 <tbody>
