--- a/templates/form/inventory.html
+++ b/templates/form/inventory.html
@@ -89,17 +89,16 @@
             <table>
                 <thead>
                     <tr>
-                        <td>Type</td>
+                        <td>Tipo</td>
                         <td>Ean Muni</td>
-                        <td>Descripción</td>
-                        <td>Sum Unidad de converción</td>
+                        <td>Descripcion</td>
+                        <td>Catidad</td>
                     </tr>
                 </thead>
                 <tbody>
                   {% for row in data %}
                   <tr>
                       <td>{{row[1]}}</td>
-                      <td>{{row[2]}}</td>
                       <td>{{row[3]}}</td>
                       <td>{{row[4]}}</td>
                       <td>{{row[5]}}</td>
