--- a/templates/form/receiving.html
+++ b/templates/form/receiving.html
@@ -35,7 +35,7 @@
                 <label  for="ReceivingType" > Receiving Type</label>
                     <select name="ReceivingType" id="ReceivingType" required>
                         <option value="Recepción">Recepción</option>
-                        <option value="Faltantes">Compla Faltantes</option>
+                        <option value="Faltantes">Compra Faltantes</option>
                         <option value="Devolución">Devolución</option>
                         <option value="Inventory">Inventario</option>
                     </select>
