--- a/templates/home.html
+++ b/templates/home.html
@@ -52,32 +52,32 @@
             <div class="mudulos">
                 <a href='/Damage' class='Proces_link'>
                 <i class="fa-solid fa-land-mine-on"></i>
-                 Damage</a>
+                 Mermas</a>
             </div>
             <div class="mudulos">
                 <a href='/Product' class='Proces_link'>
                     <i class="fa-solid fa-pen-to-square"></i>
-                 Product Register</a>
+                 Registro de Productos</a>
             </div>
             <div class="mudulos">
                 <a href='/Inventory' class='Proces_link'>
                     <i class="fa-solid fa-boxes-stacked"></i>
-                 Inventory</a>
+                 Inventario</a>
             </div>
             <div class="mudulos">
                 <a href='/Receiving' class='Proces_link'>
                 <i class="fa-solid fa-truck-ramp-box"></i>
-                 Receiving</a>
+                 Recepción</a>
             </div>
             <!-- <div class="mudulos">
                 <a href='/missing' class='Proces_link'>
                     <i class="fa-solid fa-clock"></i>
-                Missing</a>
+                Faltantes</a>
             </div> -->
             <!-- <div class="mudulos">
                 <a href='/Return' class='Proces_link'>
                     <i class="fa-solid fa-road-circle-exclamation"></i>
-                Return</a> -->
+                Retornos</a> -->
             </div>
         </div>
 {% endblock %}
