--- a/templates/registro.html
+++ b/templates/registro.html
@@ -29,27 +29,27 @@
     <div class="container"> 
         <form action="/registrar" method="POST">
             <label for="FirstName">
-                First name  :
+                Nombre  :
             </label>
             <input type="text" placeholder="First Name" name="FirstName" required>
             <label for="LastName">
-                Last name :
+                Apellido :
             </label>
             <input type="text" placeholder="Last Name" name="LastName" required>
             <label for="User">
-                User :
+                Usuario :
             </label>
             <input type="text" placeholder="User" name="User" required>
             <label for="Password">
-                Password :
+                Contraseña :
             </label>
             <input  type="password" placeholder="******" name="Password" required autocomplete="off">
             <label for="ValidatePassword">
-                Validate Password :
+                Confirmar Contraseña :
             </label>
             <input  type="password" placeholder="******" name="ValidatePassword" required autocomplete="off">
             <label for="Access">
-                Access :
+                Permisos :
             </label>
             <select name="Access" required>
                 <option disabled selected>Selecciona una Opción </option>
