--- a/templates/reportes/t_orders.html
+++ b/templates/reportes/t_orders.html
@@ -35,20 +35,20 @@
     <div class="filtros">
         <form action="/Reporte_orders/0" method="post" class="form_filtros">
             <select name="filtro">
-                <option value="RouteName">Route Name</option>
+                <option value="RouteName">Ruta</option>
                 <option value="FUName">	FU Name</option>
-                <option value="Service_Zone">Service Zone</option>
+                <option value="Service_Zone">Zona de servicio</option>
                 <option value="FK_order">FK Order</option>
                 <option value="Packer">Packer</option>
                 <option value="FuOrder">FuOrder</option>
                 <option value="Ean">Ean</option>
                 <option value="OperationGroup">Operation Group</option>
-                <option value="ProductName">Product Name</option>
+                <option value="ProductName">Descripción</option>
                 <option value="Type">Type</option>
                 <option value="Vendedor">Vendedor</option>
                 <option value="CLid">CLid</option>
                 <option value="Stop">Stop</option>
-                <option value="Status">Status</option>
+                <option value="Status">Estatus</option>
                 <option value="responsable">Responsable</option>
             </select>
             <input autocomplete="off" type="text" name="valor">
@@ -64,24 +64,24 @@
             <table>
                 <thead >
                     <tr class="head">
-                        <th> ROUTE NAME </th>
+                        <th> Ruta </th>
                         <th> FU NAME</th>
-                        <th> SERVICE ZONE</th>
+                        <th> Zona de servicio</th>
                         <th> FK ORDER</th>
                         <th> PACKER </th>
                         <th> FU ORDER </th>
                         <th> EAN </th>
                         <th> OPERATION GROUP </th>
-                        <th> PRODUCT NAME </th>
+                        <th> Descripción </th>
                         <th> TYPE </th>
-                        <th> DELIVERY DAY</th>
-                        <th> O.Q </th>
-                        <th> VENDEDOR </th>
+                        <th> Dia de entrega</th>
+                        <th> Cantidad Solicitada </th>
+                        <th> Vendedor </th>
                         <th> CL ID </th>
                         <th> STOP</th>
-                        <th> C.Q</th>
-                        <th> P.Q</th>
-                        <th> STATUS </th>
+                        <th> Cantidad Surtida</th>
+                        <th> Cantidad Pendiente</th>
+                        <th> Estatus </th>
                     </tr>
                 </thead>
                 <tbody>
