--- a/static/css/actualizar.css
+++ b/static/css/actualizar.css
@@ -24,7 +24,7 @@ section{
     margin-top: 0;
     background: #eee;
     width: 100%;
-    height: 500px;
+    height: calc(100%+30px);
     display:flexbox;
     padding-top: 10px;
 }
