--- a/static/css/file.css
+++ b/static/css/file.css
@@ -14,7 +14,7 @@ body{
 .form_file{
     width: 80%;
     max-width:350px;
-    height: 250px;
+    height: calc(100%+20px);
     margin: 60px auto auto auto ;
     background: #fff;
     box-shadow: 0 0 10px #aaa;
