--- a/static/css/formularios.css
+++ b/static/css/formularios.css
@@ -14,7 +14,7 @@ body{
 .packing-form{
     width: 80%;
     max-width:350px;
-    height: 300px;
+    height: calc(100%+30px);
     margin: 60px auto auto auto ;
     background: #fff;
     box-shadow: 0 0 10px #aaa;
@@ -61,7 +61,6 @@ table{
 .titulo2{
     width: 100%;
     margin-top: 0;
-
     background: #01d4c7;
     color: #fff;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
