--- a/static/css/registro.css
+++ b/static/css/registro.css
@@ -15,16 +15,16 @@ section{
     background: #eee ;
     margin: 0;
     padding:  0;
-    font-size: 2vh;
+    font-size: 10px;
     font-family: 'Khula', sans-serif;
     color: #2f3476;
-    height: 40vh;
+    height: 35vh;
 }
 .container{
     margin-top: 0;
     background: #eee;
     width: 100%;
-    height: 50VH;
+    height: calc(100%+30px);
     display:flexbox;
     padding-top: 5vh;
 }
