--- a/templates/actualizacion/Scan.html
+++ b/templates/actualizacion/Scan.html
@@ -31,7 +31,7 @@
     <div class="container-formscan">
         <section class="form-register">
             {% if data %}
-            <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistroMovPacking/{{data[0][14]}}/{{data[0][11]}}/{{data[0][8]}}">
+            <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistroMovPacking/{{clid}}/{{deliveryday}}/{{OG}}">
                 <h2 class="titulo2"> Escanea un ean</h1>
                 <label for="ean"> EAN:
                     <input name="ean" type="text" class="needs-validation" autofocus required>
@@ -48,39 +48,39 @@
             <table>
                 <thead>
                     <tr>
-                        <td>Route</td>
+                        <td>Ruta</td>
                         <td>FuOrder</td>
                         <td>Ean</td>
-                        <td>Description</td>
-                        <td>OriginQuantity</td>
-                        <td>CurrenQuantity</td>
-                        <td>Status</td>
+                        <td>Descripción</td>
+                        <td>Catidad Solicitada</td>
+                        <td>Cantidad Surtida</td>
+                        <td>Estatus</td>
                     </tr>
                 </thead>
                 <tbody>
                 {% if data %}
                   {% for row in data %}
                   <tr>
+                      <td>{{row[0]}}</td>
                       <td>{{row[1]}}</td>
+                      <td>{{row[2]}}</td>
+                      <td>{{row[3]}}</td>
+                      <td>{{row[4]}}</td>
+                      <td>{{row[5]}}</td>
                       <td>{{row[6]}}</td>
-                      <td>{{row[7]}}</td>
-                      <td>{{row[9]}}</td>
-                      <td>{{row[12]}}</td>
-                      <td>{{row[16]}}</td>
-                      <td>{{row[18]}}</td>
                   </tr>
                   {%endfor%}
                 {%endif%}
                   {%if dataf %}
                     {% for row in dataf %}
                     <tr class="verde">
+                        <td class="verde">{{row[0]}}</td>
                         <td class="verde">{{row[1]}}</td>
+                        <td class="verde">{{row[2]}}</td>
+                        <td class="verde">{{row[3]}}</td>
+                        <td class="verde">{{row[4]}}</td>
+                        <td class="verde">{{row[5]}}</td>
                         <td class="verde">{{row[6]}}</td>
-                        <td class="verde">{{row[7]}}</td>
-                        <td class="verde">{{row[9]}}</td>
-                        <td class="verde">{{row[12]}}</td>
-                        <td class="verde">{{row[16]}}</td>
-                        <td class="verde">{{row[18]}}</td>
                     </tr>
                     {%endfor%}
                   {%endif%}
