--- a/templates/actualizacion/receivingscan.html
+++ b/templates/actualizacion/receivingscan.html
@@ -33,8 +33,8 @@
             <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistroMovReceiving/{{ReceivingType}}/{{OrderNumber}}">
                 <h2 class="titulo2"> Escanea un ean</h2>
                     {%if data %}
-                    {%if data != "No Aplica" %}
-                    <h2> O.C : {{data[0][0]}}</h2>
+                    {%if OrderNumber != "No aplica" %}
+                    <h2> O.C : {{OrderNumber}}</h2>
                     {%endif%}
                     {%endif%}
                     <label for="cantidad"> Cantidad:
