--- a/templates/form/packing.html
+++ b/templates/form/packing.html
@@ -32,7 +32,7 @@
         <section class="form-register">
             <form id="contact-form" name="contact-form" class="packing-form" method="post" action="/RegistrarPacking"  >
                 <h2 class="titulo2"> Escanea un ean</h2>
-                <label  for="deliveryday" > Delivery Day:</label>
+                <label  for="deliveryday" > Dia de entrega:</label>
                     <input name="deliveryday" id="deliveryday" class="needs-validation" type="date" required >
                 <label  for="OG" > Operation Group:</label>
                     <select name="OG" id="OG" required>
