--- a/templates/actualizacion/product.html
+++ b/templates/actualizacion/product.html
@@ -30,7 +30,12 @@
     {% block body%}
     <div class="container-formscan">
         <section class="form-register">
-            {% if cantidad %}
+            {% if receivingType %}
+            <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistrarProductorec/{{ean}}/{{cantidad}}/{{ReceivingType}}/{{OrderNumber}}">
+                <h2 class="titulo2"> Registra un nuevo Producto</h2>
+                    <h4 class="info1"> CB_Captura: {{ean}} </h4>
+                    <h4 class="info1"> Cantidad: {{cantidad}} </h4>
+            {% elif cantidad %}
             <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistrarProductoinv/{{ean}}/{{cantidad}}">
                 <h2 class="titulo2"> Registra un nuevo Producto</h2>
                     <h4 class="info1"> CB_Captura: {{ean}} </h4>
