--- a/templates/reportes/t_receiving.html
+++ b/templates/reportes/t_receiving.html
@@ -61,7 +61,7 @@
                         <th> Ean</th>
                         <th> Ean Muni </th>
                         <th> Unidad de conversion </th>
-                        <th> Catidad </th>
+                        <th> Cantidad </th>
                         <th> Descripción </th>
                         <th> Responsable </th>
                         <th> Estatus </th>
