--- a/templates/home.html
+++ b/templates/home.html
@@ -39,11 +39,11 @@
                 </div>
     </div>
         <div class="container_form">
-            <div class="mudulos">
+            <!-- <div class="mudulos">
                 <a href='/Packing' class='Proces_link'>
                     <i class="fa-solid fa-boxes-packing"></i>
                  Packing</a>
-            </div>
+            </div> -->
             <!-- <div class="mudulos">
                 <a href='/Picking' class='Proces_link'>
                 <i class="fa-solid fa-dolly"></i>
