--- a/templates/nav.html
+++ b/templates/nav.html
@@ -22,8 +22,8 @@
         <button class="accordion"><i class="fa-solid fa-mobile-screen"></i>  Reportes</i></button>
         <div class="panel">
                     <a href='/Reporte_receiving/0' class='link_menu'>  Receiving</a>
-                    <a href='/Reporte_movements/0' class='link_menu'>  movements</a>
-                    <a href='/Reporte_orders/0' class='link_menu'>  Orders</a>      
+                    <!-- <a href='/Reporte_movements/0' class='link_menu'>  movements</a>
+                    <a href='/Reporte_orders/0' class='link_menu'>  Orders</a>       -->
         </div>
         
             {% if  Datos['Rango'] == 'Administrador' or Datos['Rango'] == 'Training' %}
