--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,9 +21,9 @@
         <a href='/home' class='link_menu'><i class="fas fa-mobile">  Procesos</i> </a>
         <button class="accordion"><i class="fa-solid fa-mobile-screen"></i>  Reportes</i></button>
         <div class="panel">
-                    <a href='/Reporte_receiving/0' class='link_menu'>  Receiving</a>
-                    <!-- <a href='/Reporte_movements/0' class='link_menu'>  movements</a>
-                    <a href='/Reporte_orders/0' class='link_menu'>  Orders</a>       -->
+                    <a href='/Reporte_receiving/0' class='link_menu'>  Movimientos </a>
+                    <a href='/ReporteInventori/0' class='link_menu'>  Inventarios</a>
+                    <a href='/ReporteProducts/0' class='link_menu'>  Products</a>      
         </div>
         
             {% if  Datos['Rango'] == 'Administrador' or Datos['Rango'] == 'Training' %}
