--- a/templates/reportes/t_product.html
+++ b/templates/reportes/t_product.html
@@ -39,7 +39,8 @@
                 <option value="EAN_MUNI">EAN MUNI</option>
                 <option value="Producto">Producto</option>
             </select>
-            <input autocomplete="off" type="text" name="valor"> value="Buscar">
+            <input autocomplete="off" type="text" name="valor">
+            <input type="submit" value="Buscar">
         </form>
         <a href="/csvproduct" target="_blank" class="download_csv"><i class="fas fa-file-download"></i>  Descargar</a>
     </div>
