Separar Procesos Receiving

--- a/templates/home.html
+++ b/templates/home.html
@@ -69,15 +69,15 @@
                 <i class="fa-solid fa-truck-ramp-box"></i>
                  Recepción</a>
             </div>
-            <!-- <div class="mudulos">
-                <a href='/missing' class='Proces_link'>
+            <div class="mudulos">
+                <a href='/RegistrarReceivingP/Faltantes' class='Proces_link'>
                     <i class="fa-solid fa-clock"></i>
                 Faltantes</a>
-            </div> -->
-            <!-- <div class="mudulos">
-                <a href='/Return' class='Proces_link'>
+            </div>
+            <div class="mudulos">
+                <a href='/Devolución/ReceivingType' class='Proces_link'>
                     <i class="fa-solid fa-road-circle-exclamation"></i>
-                Retornos</a> -->
+                    Devolución</a>
             </div>
         </div>
 {% endblock %}
