--- a/templates/form/receiving.html
+++ b/templates/form/receiving.html
@@ -32,15 +32,8 @@
         <section class="form-register">
             <form id="contact-form" name="contact-form" class="packing-form" method="post" action="/RegistrarReceiving"  >
                 <h2 class="titulo2"> Receiving</h2>
-                <label  for="ReceivingType" > Receiving Type</label>
-                    <select name="ReceivingType" id="ReceivingType" required>
-                        <option value="Recepción">Recepción</option>
-                        <option value="Faltantes">Compra Faltantes</option>
-                        <option value="Devolución">Devolución</option>
-                        <option value="Inventory">Inventario</option>
-                    </select>
                     <label for="OrderNumber"> Orden de Compra  :
-                        <input name="OrderNumber" type="text"  autofocus >
+                        <input name="OrderNumber" type="text"  autofocus autocomplete="off" required>
                     </label>
                     <input  type="submit" id="continuar"  value="Continue" >
             </form>
