--- a/templates/home.html
+++ b/templates/home.html
@@ -51,7 +51,7 @@
             </div> -->
             <div class="mudulos">
                 <a href='/Damage' class='Proces_link'>
-                <i class="fa-solid fa-land-mine-on"></i>
+                <i class="fa-solid fa-circle-exclamation"></i>
                  Mermas</a>
             </div>
             <div class="mudulos">
