correccion de url

--- a/templates/home.html
+++ b/templates/home.html
@@ -75,7 +75,7 @@
                 Faltantes</a>
             </div>
             <div class="mudulos">
-                <a href='/Devolución/ReceivingType' class='Proces_link'>
+                <a href='/RegistrarReceivingP/Devolución' class='Proces_link'>
                     <i class="fa-solid fa-road-circle-exclamation"></i>
                     Devolución</a>
             </div>
