--- a/templates/actualizacion/product.html
+++ b/templates/actualizacion/product.html
@@ -69,6 +69,7 @@
                         <td>EAN MUNI</td>
                         <td>Producto</td>
                         <td>Factor de Conversion</td>
+                        <td>#</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -78,6 +79,15 @@
                       <td>{{row[2]}}</td>
                       <td>{{row[3]}}</td>
                       <td>{{row[4]}}</td>
+                      <td>{% if ReceivingType or OrderNumber %}
+                            <a class="butonselect" href="/RegistrarProductoselect/{{ean}}/{{row[2]}}/{{row[3]}}/{{row[4]}}/{{cantidad}}/{{ReceivingType}}/{{OrderNumber}}">
+                        {% elif cantidad %}
+                        <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistrarProductoinv/{{ean}}/{{cantidad}}">
+                            <a class="butonselect" href="/RegistrarProductoselectinv/{{ean}}/{{row[2]}}/{{row[3]}}/{{row[4]}}/{{cantidad}}">
+                        {% else %}
+                        <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistrarProducto/{{ean}}">
+                            <a class="butonselect" href="/RegistrarProductoselectproduct/{{ean}}/{{row[2]}}/{{row[3]}}/{{row[4]}}">
+                        {%endif%}</a> </td>
                   </tr>
                   {%endfor%}
                 </tbody>
