--- a/templates/actualizacion/product.html
+++ b/templates/actualizacion/product.html
@@ -80,13 +80,11 @@
                       <td>{{row[3]}}</td>
                       <td>{{row[4]}}</td>
                       <td>{% if ReceivingType or OrderNumber %}
-                            <a class="butonselect" href="/RegistrarProductoselect/{{ean}}/{{row[2]}}/{{row[3]}}/{{row[4]}}/{{cantidad}}/{{ReceivingType}}/{{OrderNumber}}">
+                            <a class="butonselect" href="/RegistrarProductoselect/{{ean}}/{{row[2]}}/{{row[3]}}/{{row[4]}}/{{cantidad}}/{{ReceivingType}}/{{OrderNumber}}">Selecionar</a>
                         {% elif cantidad %}
-                        <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistrarProductoinv/{{ean}}/{{cantidad}}">
-                            <a class="butonselect" href="/RegistrarProductoselectinv/{{ean}}/{{row[2]}}/{{row[3]}}/{{row[4]}}/{{cantidad}}">
+                            <a class="butonselect" href="/RegistrarProductoselectinv/{{ean}}/{{row[2]}}/{{row[3]}}/{{row[4]}}/{{cantidad}}">Selecionar</a>
                         {% else %}
-                        <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistrarProducto/{{ean}}">
-                            <a class="butonselect" href="/RegistrarProductoselectproduct/{{ean}}/{{row[2]}}/{{row[3]}}/{{row[4]}}">
+                            <a class="butonselect" href="/RegistrarProductoselectproduct/{{ean}}/{{row[2]}}/{{row[3]}}/{{row[4]}}">Selecionar</a>
                         {%endif%}</a> </td>
                   </tr>
                   {%endfor%}
