--- a/static/css/formsprodct.css
+++ b/static/css/formsprodct.css
@@ -54,7 +54,7 @@ table{
 }
 table tr{
 
-    padding: 5px 0;
+    padding: 10px 0;
     border-bottom:1px solid#ddd;
 }
 
@@ -122,8 +122,10 @@ thead,
 
 .butonselect{
     margin: auto;
-    padding: 3px;
+    padding: 2px;
     background: #04f892;
     color: #fff;
     border-radius: 5px;
+    font-size: 10px;
+    border: 1px solid #555;
 }
